[package]
name = "zk-graph-engine"
version = "0.1.0"
edition = "2021"
description = "A library for building and evaluating computational graphs."
license = "MIT"
authors = ["Aarjav Patni <aarjav.patni@uwaterloo.ca>"]
repository = "https://github.com/AarjavPatni/zk-graph-engine"


[dependencies]
log = "0.4"
env_logger = "0.10"
